# data-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
src/pipeline/: bronze.py  gold.py  ingest.py  orchestrate.py  quality.py  serve.py  silver.py  spark_session.py
tests/: conftest.py  test_bronze.py  test_gold.py  test_orchestrate.py  test_quality.py  test_serve.py  test_silver.py
